--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@ body {
    font-family: Italiana;
    font-size: 20px;
 }
-#d1 {
-   
-}
 #d2 {
    width: 80%;
    margin: 0 auto;
@@ -45,6 +42,11 @@ p {
    margin: 0 auto;
    text-align: center;
    text-decoration: underline;
+}
+#fl {
+   width: 12px;
+   height: 12px;
+   border-radius: 50%;
 }
 
 @font-face {
