--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .d3, .d4, .d5 {
     width: 96%;
     line-height: 2.5;
-    margin: 25px 5px 0;
+    margin: 25px auto 0;
     /* border: 2px solid green; */
 }
 .d3 {
