--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     width: 80%;
     margin: 0 auto;
 }
-.d3, .d4, .d5 {
+.d3, .d4, .d5, .d6 {
     width: 96%;
-    line-height: 2.5;
+    line-height: 2.2;
     margin: 25px auto 0;
     /* border: 2px solid green; */
 }
