--- a/style.css
+++ b/style.css
@@ -111,10 +111,10 @@ footer {
     src: url('Italiana-Regular.woff');
 }
 
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
     .d3, .d4, .d5 {
         width: 45%;
         margin: 25px auto;
-        /* border: 2px solid green; */
+        //border: 2px solid green;
     }
-}
+} */
