--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ p {
     text-align: center;
     text-decoration: underline;
 }
+ol {
+    margin: 0;
+    padding: 0 0 0 20px;
+}
 #fl {
     display: inline-block;
     width: 12px;
