--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     color: #eff2f7;
     background: #212121;
     font-size: 20px;
-    font-family: Italiana;
+    font-family: Celine;
 }
 #d2 {
     width: 80%;
@@ -124,6 +124,10 @@ footer {
 @font-face {
     font-family: 'Italiana';
     src: url('Italiana-Regular.woff');
+}
+@font-face {
+    font-family: 'Celine';
+    src: url('CelineSans.otf');
 }
 
 /* @media only screen and (min-width: 768px) {
