--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background: #212121;
     font-size: 20px;
     font-family: Celine;
+    font-variant-ligatures: normal;
 }
 #d2 {
     width: 80%;
