--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     color: #eff2f7;
     background: #212121;
-    font-size: 20px;
+    font-size: 22px; /*20*/
     font-family: Celine;
     font-variant-ligatures: normal;
 }
