--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     color: #eff2f7;
     background: #212121;
     font-size: 20px; /*20*/
-    font-family: Rosewood;
+    font-family: Flora;
     font-variant-ligatures: normal;
 }
 #d2 {
@@ -147,8 +147,8 @@ footer {
     src: url('Fonts/Mages.otf') format(opentype);
 }
 @font-face {
-    font-family: 'Floral';
-    src: url('Fonts/Floral\ Serif.ttf') format(truetype);
+    font-family: 'Flora';
+    src: url('Fonts/Flora\ Serif.ttf') format(truetype);
 }
 @font-face {
     font-family: 'Pinewood';
