--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     color: #eff2f7;
     background: #212121;
     font-size: 20px; /*20*/
-    font-family: Flora;
+    font-family: Celine;
     font-variant-ligatures: normal;
 }
 #d2 {
