--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
     width: 80%;
     margin: 0 auto;
 }
-.d3, .d4, .d5, .d6 {
+.d3, .d4, .d5, .d6, .d7 {
     width: 96%;
     line-height: 2.2;
     margin: 25px auto 0;
     /* border: 2px solid green; */
 }
-.d4, .d5, .d6 {
+.d4, .d5, .d6, .d7 {
     display: none;
 }
 .header {
