--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ footer {
    height: 44px;
 }
 .line-wobble {
-  --uib-size: 80px;
-  --uib-speed: 1.75s;
+  --uib-size: 120px;
+  --uib-speed: 1.4s;
   --uib-color: white;
   --uib-line-weight: 5px;
 
@@ -172,17 +172,16 @@ footer {
   height: 100%;
   width: 100%;
   border-radius: calc(var(--uib-line-weight) / 2);
-  animation: wobble var(--uib-speed) ease-in-out infinite;
-  transform: translateX(-95%);
+  animation: race var(--uib-speed) ease-in-out infinite;
+  transform: translateX(-100%);
   background-color: var(--uib-color);
 }
-@keyframes wobble {
-  0%,
-  100% {
-    transform: translateX(-95%);
+@keyframes race {
+  0% {
+    transform: translateX(-100%);
   }
-  50% {
-    transform: translateX(95%);
+  100% {
+    transform: translateX(100%);
   }
 }
 
