--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ body {
     border-radius: 14px;
     text-align: center;
 }
+input:focus {
+   outline: none;
+   border: 2px solid teal;
+}
+input:invalid {
+   border: 2px solid red;
+}
 hr {
     width: 50%;
 }
