--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
     display: none;
 }
 .d8 {
-   width: 99%;
-   margin: 30px auto 0;
+   width: 120px;
+   margin: 30px 0;
 }
 .d8 label, .d8 input {
    display: flex;
