--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     margin: 20px 50px 0;
     border-radius: 14px;
     text-align: center;
+    transition: .4s;
 }
 input:focus {
    outline: none;
