--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ hr {
 }
 input {
     margin: 20px 10px 0;
-    accent-color: #F55050;
+    accent-color: #3FB6C9;
 }
 label {
     margin-left: 50px;
