--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     font-size: 20px; /*20*/
     font-family: Bosch;
     font-variant-ligatures: normal;
+    cursor: url('https://img.icons8.com/color-glass/25/select-cursor--v1.png'),
+    url('https://img.icons8.com/doodle/30/blue-pointer.png'), auto;
 }
 #d2 {
     width: 80%;
