--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+  overscroll-behavior: contain;
+}
+body {
+  overscroll-behavior-y: none;
+}
+
 body {
     color: #eff2f7;
     background: #212121;
