--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-html {
-  overscroll-behavior: contain;
-}
 body {
-  overscroll-behavior-y: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; /* For smooth scrolling in iOS */
 }
 
 body {
