--- a/style.css
+++ b/style.css
@@ -156,53 +156,33 @@ footer {
   opacity: 1;
 }
 
-.line {
-   display: flex;
-   height: 44px;
+#msgBox {
+   width: 20px;
+   height: 20px;
+   padding: 0;
+   margin: 10px auto 0px;
+   border-radius: 50%;
+   border: 2.5px solid transparent;
+   border-top-color: #4285F4;
+   animation: spin 1.9s ease-in-out infinite;
 }
-.line-wobble {
-  --uib-size: 120px;
-  --uib-speed: 1.4s;
-  --uib-color: white;
-  --uib-line-weight: 5px;
-
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--uib-line-weight);
-  width: var(--uib-size);
-  border-radius: calc(var(--uib-line-weight) / 2);
-  overflow: hidden;
-  margin: auto;
-  transform: translate3d(0, 0, 0);
-}
-.line-wobble::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: var(--uib-color);
-  opacity: 0.1;
-}
-.line-wobble::after {
-  content: '';
-  height: 100%;
-  width: 100%;
-  border-radius: calc(var(--uib-line-weight) / 2);
-  animation: race var(--uib-speed) ease-in-out infinite;
-  transform: translateX(-100%);
-  background-color: var(--uib-color);
-}
-@keyframes race {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(100%);
-  }
+@keyframes spin {
+   0% {
+      border-top-color: #4285F4; /* Initial color */
+   }
+   30% {
+      border-top-color: #DB4437; /* Change color at 25% of animation */
+   }
+   50% {
+      border-top-color: #F4B400; /* Change color at 50% of animation */
+   }
+   70% {
+      border-top-color: #0F9D58; /* Change color at 75% of animation */
+   }
+   100% {
+      border-top-color: #4285F4; /* Back to initial color at 100% of animation */
+      transform: rotate(360deg);
+   }
 }
 
 @font-face {
