--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ body {
     display: flex;
     margin: 18px 0 10px;
 }
+.header p {
+    font-size: 18px;
+}
 #inp {
     color: white;
     background: black;
